Rename workflow folder and add comment to yml

--- a/.github/Workflows/ci.yml
+++ b/.github/Workflows/ci.yml
@@ -1,4 +1,5 @@
 # based on https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-net
+# aaa
 
 name: Run tests in Answers
 
