--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,37 +39,15 @@ jobs:
         run: dotnet --list-sdks
 
       - name: Restore project dependencies
-        working-directory: ./csharp/SdetBootcampDay1
+        working-directory: ./csharp
         run: dotnet restore -p:TargetFramework=${{ matrix.framework }}
 
       - name: Build the project
-        working-directory: ./csharp/SdetBootcampDay1
+        working-directory: ./csharp
         run: dotnet build --framework ${{ matrix.framework }} --no-restore
 
       - name: Run tests from day 1
-        working-directory: ./csharp/SdetBootcampDay1
+        working-directory: ./csharp
         run: dotnet test --framework ${{ matrix.framework }} --no-restore --no-build --verbosity normal --filter Name~Answers
     
-        - name: Restore day 2 project dependencies
-        working-directory: ./csharp/SdetBootcampDay2
-        run: dotnet restore -p:TargetFramework=${{ matrix.framework }}
-
-      - name: Build the day 2 project
-        working-directory: ./csharp/SdetBootcampDay2
-        run: dotnet build --framework ${{ matrix.framework }} --no-restore
-
-      - name: Run tests from day 2
-        working-directory: ./csharp/SdetBootcampDay2
-        run: dotnet test --framework ${{ matrix.framework }} --no-restore --no-build --verbosity normal --filter Name~Answers
-
-       - name: Restore day 3 project dependencies
-        working-directory: ./csharp/SdetBootcampDay3
-        run: dotnet restore -p:TargetFramework=${{ matrix.framework }}
-
-      - name: Build the day 3 project
-        working-directory: ./csharp/SdetBootcampDay3
-        run: dotnet build --framework ${{ matrix.framework }} --no-restore
-
-      - name: Run tests from day 3
-        working-directory: ./csharp/SdetBootcampDay3
-        run: dotnet test --framework ${{ matrix.framework }} --no-restore --no-build --verbosity normal --filter Name~Answers
+        
